--- a/_posts/2000-01-01-Models.md
+++ b/_posts/2000-01-01-Models.md
@@ -1,10 +1,13 @@
 ---
-layout: post
-title: And subtle sharing popups...
+title: <font size=10 color=lightblue>III. Models</font>
 ---
 
-Check out the share/permalink at the bottom of each post. This gives you a nice popup that allows people to share the specific post, using pure CSS. Okay, so there's a weeee bit of js to allow for a 'copy to clipboard' button. But these sharing tools won't bloat your page, or look obnoxious.
+<font size=6>kripke models</font>
+- list item
+<font size=6>mesa model</font>
+<img src="img/-" height="50%">
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+Plus **bolding** and *italics* and whatever else you want.
 
-Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+[Look at the code](https://github.com/Jiayun-Zhang/LAMAS_project) from github
+
