--- a/_posts/2000-01-01-Models.md
+++ b/_posts/2000-01-01-Models.md
@@ -5,7 +5,7 @@ title: <font size=10 color=lightblue>III. Models</font>
 <font size=6>kripke models</font>
 - list item
 <font size=6>mesa model</font>
-<img src="img/-" height="50%">
+<img src="img/cover.jpg" height="50%">
 
 Plus **bolding** and *italics* and whatever else you want.
 
