--- a/_posts/2000-01-01-Models.md
+++ b/_posts/2000-01-01-Models.md
@@ -3,9 +3,11 @@ title: <font size=10 color=lightblue>III. Models</font>
 ---
 
 <font size=6>kripke models</font>
-- list item
+- Initially, we can draw the following Kripke model (with m=5, where three islanders have brown eyes and two have blue eyes): None of the islanders can determine the color of their own eyes. But they can determine the color of other islanders' eyes. So each islander's knowledge includes the color of the other islanders' eyes, as well as both blue and brown as possible colors for their own eyes. So each islander incorporates two possible worlds: the real world, and the world that replaces their own eye color in the real world with another color.
+--
+<img src="img/Kripke.JPG" width="50%" height="30%">
 <font size=6>mesa model</font>
-<img src="img/cover.jpg" height="50%">
+
 
 Plus **bolding** and *italics* and whatever else you want.
 
