--- a/_posts/2000-01-03-intro.md
+++ b/_posts/2000-01-03-intro.md
@@ -3,3 +3,4 @@ title: <font size=10 color=lightblue>I. Introduction</font>
 
 ---
 >On an island, there is a tribe of 1000 people with various eye colors. They are forbidden by their religion to know or discuss their own eye color. Each person can see the eye colors of others but not their own. If someone discovers their own eye color, they must leave the island the next day. There are 100 people with blue eyes and 900 with brown eyes, but the tribe is unaware of these statistics. All the tribe members are trained in logic and will immediately draw whatever conclusions they can from the information available to them. One day, a blue-eyed foreigner visits the island and gains the trust of the tribe. During a speech, the foreigner mistakenly mentions his own eye color and reveals that at least one person from the tribe also has blue eyes.
+<img src="img/cover.jpg" width="100%" height="100%">
