--- a/_posts/2000-01-10-Models.md
+++ b/_posts/2000-01-10-Models.md
@@ -5,7 +5,7 @@ title: <font size=10 color=lightblue>III. Models</font>
 <font size=6>Kripke model</font>
 - <font size=4>Initially, we can draw the following Kripke model (with m=5, where three islanders have brown eyes and two have blue eyes): None of the islanders can determine the color of their own eyes. But they can determine the color of other islanders' eyes. So each islander's knowledge includes the color of the other islanders' eyes, as well as both blue and brown as possible colors for their own eyes. So each islander incorporates two possible worlds: the real world, and the world that replaces their own eye color in the real world with another color.</font>
 ---
-<img src="img/Kripke.JPG" width="100%" height="100%">
+<img src="img/Kripkle.jpg" width="50%" height="50%">
 
 <font size=6>Mesa model</font>
 - Mesa helps with creating MAS simulations. Here the Mesa model includes 100 islanders, with 90 having brown eyes and 10 having blue eyes. The interface has a grid to display the islanders and a graph to show the number of alive islanders. Sliders allow adjusting the counts of brown-eyed and blue-eyed islanders, and a selector offers puzzle variations. This model enables exploring the dynamics of the islander population in a flexible way.
