--- a/_posts/2000-01-10-Models.md
+++ b/_posts/2000-01-10-Models.md
@@ -1,12 +1,31 @@
 ---
-title: <font size=10 color=lightblue>III. Models</font>
+title: <font size=10 color=lightblue>IV. Models</font>
 ---
 
 <font size=6>Kripke model</font>
-- <font size=4>Initially, we can draw the following Kripke model (with m=5, where three islanders have brown eyes and two have blue eyes): None of the islanders can determine the color of their own eyes. But they can determine the color of other islanders' eyes. So each islander's knowledge includes the color of the other islanders' eyes, as well as both blue and brown as possible colors for their own eyes. So each islander incorporates two possible worlds: the real world, and the world that replaces their own eye color in the real world with another color.</font>
----
-<img src="img/Kripkle.jpg" width="50%" height="50%">
+> <font size=4>Initially, we can draw the following <strong>Kripke model (with m=5)</strong>: (From top to down, left to right). We assume that there are three brown-eyed people and two blue-eyed people. In Fig.1, it is the situation that the foreigner has not made the announcement. None of the islanders can determine the color of their own eyes. But they can determine the color of other islanders' eyes. So each islander's knowledge includes the color of the other islanders' eyes, as well as both blue and brown as possible colors for their own eyes. So each islander incorporates two possible worlds: the real world, and the world that replaces their own eye color in the real world with another color.Then after the foreigner made the announcement, the situation that everyone has brown eyes is not possible, therefore the Kripke model (<strong>Day 0</strong>) will be Fig.2. On the <strong>Day 1 </strong>(Fig.3) , no one leaves, because each blue-eyed person is waiting for the other one to leave. On the <strong>Day 2 </strong>(Fig.4), the blue-eyed people both realize that they have blue eyes, and they both leave at midnight.</font>
+<center>
+    <img style="border-radius: 0.3125em;
+    box-shadow: 0 2px 4px 0 rgba(34,36,38,.12),0 2px 10px 0 rgba(34,36,38,.08);width: 50%;
+    height: 50%;" 
+    src="img/Kripke-normal.JPG"><img style="border-radius: 0.3125em;
+    box-shadow: 0 2px 4px 0 rgba(34,36,38,.12),0 2px 10px 0 rgba(34,36,38,.08);width: 50%;
+    height: 50%;" 
+    src="img/normal-day_0.JPG"><img style="border-radius: 0.3125em;
+    box-shadow: 0 2px 4px 0 rgba(34,36,38,.12),0 2px 10px 0 rgba(34,36,38,.08);width: 40%;
+    height: 40%;" 
+    src="img/normal-day_1.JPG"><img style="border-radius: 0.3125em;
+    box-shadow: 0 2px 4px 0 rgba(34,36,38,.12),0 2px 10px 0 rgba(34,36,38,.08);width: 60%;
+    height: 60%;" 
+    src="img/normal-day_2.JPG">
+    <br>
+    <div style="color:orange; border-bottom: 1px solid #d9d9d9;
+    display: inline-block;
+    color: #999;
+    padding: 2px;">Fig.1-4 ( top to down, left to right ) Normal situation Kripke model </div>
+</center>
 
+---
 <font size=6>Mesa model</font>
 - Mesa helps with creating MAS simulations. Here the Mesa model includes 100 islanders, with 90 having brown eyes and 10 having blue eyes. The interface has a grid to display the islanders and a graph to show the number of alive islanders. Sliders allow adjusting the counts of brown-eyed and blue-eyed islanders, and a selector offers puzzle variations. This model enables exploring the dynamics of the islander population in a flexible way.
 
