--- a/_posts/2000-01-10-Models.md
+++ b/_posts/2000-01-10-Models.md
@@ -3,7 +3,7 @@ title: <font size=10 color=lightblue>IV. Normal Models</font>
 ---
 
 <font size=6>Kripke model</font>
-Initially, we can draw the following <strong>Kripke model (with m=5)</strong>: (From top to down, left to right). **L** represents **blue-eyed** and **R** represents **brown-eyed**. We assume that there are three brown-eyed people and two blue-eyed people. In Fig.1, it is the situation that the foreigner has not made the announcement. None of the islanders can determine the color of their own eyes. But they can determine the color of other islanders' eyes. So each islander's knowledge includes the color of the other islanders' eyes, as well as both blue and brown as possible colors for their own eyes. So each islander incorporates two possible worlds: the real world, and the world that replaces their own eye color in the real world with another color.Then after the foreigner made the announcement, the situation that everyone has brown eyes is not possible, therefore the Kripke model (<strong>Day 0</strong>) will be Fig.2. On the <strong>Day 1 </strong>(Fig.3) , no one leaves, because each blue-eyed person is waiting for the other one to leave. On the <strong>Day 2 </strong>(Fig.4), the blue-eyed people both realize that they have blue eyes, and they both leave at midnight.
+Initially, we can draw the following <strong>Kripke model (with m=5)</strong>: (From top to down, left to right). **L** represents **blue-eyed** and **R** represents **brown-eyed**. We assume that there are three brown-eyed people and two blue-eyed people. In Fig.1, it is the situation that the foreigner has not made the announcement. None of the islanders can determine the color of their own eyes. But they can determine the color of other islanders' eyes. So each islander's knowledge includes the color of the other islanders' eyes, as well as both blue and brown as possible colors for their own eyes. So each islander incorporates two possible worlds: the real world, and the world that replaces their own eye color in the real world with another color.Then after the foreigner made the announcement, the situation that everyone has brown eyes is not possible (which is the common knowledge), therefore the Kripke model (<strong>Day 0</strong>) will be Fig.2. On the <strong>Day 1 </strong>(Fig.3) , no one suicides, because each blue-eyed person is waiting for the other one to suicide. On the <strong>Day 2 </strong>(Fig.4), the blue-eyed people both realize that they have blue eyes, and they both suicide at midnight.
 <center>
     <img style="border-radius: 0.3125em;
     box-shadow: 0 2px 4px 0 rgba(34,36,38,.12),0 2px 10px 0 rgba(34,36,38,.08);width: 30%;
@@ -27,7 +27,7 @@ Initially, we can draw the following <strong>Kripke model (with m=5)</strong>: (
 
 ---
 <font size=6>Mesa model</font>
-- Mesa helps with creating MAS simulations. Here the Mesa model includes 100 islanders, with 90 having brown eyes and 10 having blue eyes. The interface has a grid to display the islanders and a graph to show the number of alive islanders. Sliders allow adjusting the counts of brown-eyed and blue-eyed islanders, and a selector offers puzzle variations. This model enables exploring the dynamics of the islander population in a flexible way.
+- Mesa helps with creating MAS simulations. Here the Mesa model is used to illustrate the variation of number of states in Kripke model and number of alive islanders day by day. The interface has a grid to display the islanders and a graph to show the number of alive islanders. Sliders allow adjusting the counts of brown-eyed and blue-eyed islanders, and a selector offers puzzle variations. This model enables exploring the dynamics of the islander population in a flexible way.
 
 [Look at the code](https://github.com/Jiayun-Zhang/LAMAS_project) from github
 
