--- a/_posts/2000-01-10-Models.md
+++ b/_posts/2000-01-10-Models.md
@@ -1,9 +1,9 @@
 ---
-title: <font size=10 color=lightblue>IV. Normal Models</font>
+title: <font size=10 face="courier New" color=darkblue>IV. Normal Models</font>
 ---
 
 <font size=6>Kripke model</font>
-Initially, we can draw the following <strong>Kripke model (with m=5)</strong>: (From top to down, left to right). **L** represents **blue-eyed** and **R** represents **brown-eyed**. We assume that there are three brown-eyed people and two blue-eyed people. In Fig.1, it is the situation that the foreigner has not made the announcement. None of the islanders can determine the color of their own eyes. But they can determine the color of other islanders' eyes. So each islander's knowledge includes the color of the other islanders' eyes, as well as both blue and brown as possible colors for their own eyes. So each islander incorporates two possible worlds: the real world, and the world that replaces their own eye color in the real world with another color.Then after the foreigner made the announcement, the situation that everyone has brown eyes is not possible (which is the common knowledge), therefore the Kripke model (<strong>Day 0</strong>) will be Fig.2. On the <strong>Day 1 </strong>(Fig.3) , no one suicides, because each blue-eyed person is waiting for the other one to suicide. On the <strong>Day 2 </strong>(Fig.4), the blue-eyed people both realize that they have blue eyes, and they both suicide at midnight.
+Initially, we can draw the following <strong>Kripke model (with m=5)</strong>: (From top to down, left to right). **L** represents **blue-eyed** and **R** represents **brown-eyed**. We assume that there are three brown-eyed people and two blue-eyed people. In Fig.1, it is the situation that the foreigner has not made the announcement. None of the islanders can determine the color of their own eyes. But they can determine the color of other islanders' eyes. So each islander's knowledge includes the color of the other islanders' eyes, as well as both blue and brown as possible colors for their own eyes. So each islander incorporates two possible worlds: the real world, and the world that replaces their own eye color in the real world with another color.Then after the foreigner made the announcement, the world that everyone has brown eyes (RRRRR) is not possible (which is the common knowledge), therefore the Kripke model in <strong>Day 0</strong> will be Fig.2. On the <strong>Day 1 </strong>(Fig.3) , no one suicides, because each blue-eyed person is waiting for the other one to suicide. On the <strong>Day 2 </strong>(Fig.4), the blue-eyed people both realize that they have blue eyes, and they both suicide at midnight.
 <center>
     <img style="border-radius: 0.3125em;
     box-shadow: 0 2px 4px 0 rgba(34,36,38,.12),0 2px 10px 0 rgba(34,36,38,.08);width: 30%;
