--- a/_posts/2000-01-10-Models.md
+++ b/_posts/2000-01-10-Models.md
@@ -3,21 +3,21 @@ title: <font size=10 face="courier New" color=darkblue>IV. Normal Models</font>
 ---
 
 <font size=6>Kripke model</font>
-Initially, we can draw the following <strong>Kripke model (with m=5)</strong>: (From top to down, left to right). **L** represents **blue-eyed** and **R** represents **brown-eyed**. We assume that there are three brown-eyed people and two blue-eyed people. In Fig.1, it is the situation that the foreigner has not made the announcement. None of the islanders can determine the color of their own eyes. But they can determine the color of other islanders' eyes. So each islander's knowledge includes the color of the other islanders' eyes, as well as both blue and brown as possible colors for their own eyes. So each islander incorporates two possible worlds: the real world, and the world that replaces their own eye color in the real world with another color.Then after the foreigner made the announcement, the world that everyone has brown eyes (RRRRR) is not possible (which is the common knowledge), therefore the Kripke model in <strong>Day 0</strong> will be Fig.2. On the <strong>Day 1 </strong>(Fig.3) , no one suicides, because each blue-eyed person is waiting for the other one to suicide. On the <strong>Day 2 </strong>(Fig.4), the blue-eyed people both realize that they have blue eyes, and they both suicide at midnight.
+Initially, we can draw the following <strong>Kripke model (with m=4)</strong>: (From top to down, left to right). **1** represents **blue-eyed** and **0** represents **brown-eyed**. We assume that there are two brown-eyed people and two blue-eyed people. In Fig.1, it is the situation that the foreigner has not made the announcement. None of the islanders can determine the color of their own eyes. But they can determine the color of other islanders' eyes. So each islander's knowledge includes the color of the other islanders' eyes, as well as both blue and brown as possible colors for their own eyes. So each islander incorporates two possible worlds: the real world, and the world that replaces their own eye color in the real world with another color. Then after the foreigner made the announcement, the world that everyone has brown eyes (0000) is not possible (which is the common knowledge), therefore the Kripke model in <strong>Day 0</strong> will be Fig.2. On the <strong>Day 1 </strong>(Fig.3) , no one suicides, because each blue-eyed person is waiting for the other one to suicide. On the <strong>Day 2 </strong>(Fig.4), the blue-eyed people both realize that they have blue eyes, and they both commit suicide.
 <center>
     <img style="border-radius: 0.3125em;
-    box-shadow: 0 2px 4px 0 rgba(34,36,38,.12),0 2px 10px 0 rgba(34,36,38,.08);width: 30%;
-    height: 30%;" 
-    src="img/Kripke-normal.JPG">   <img style="border-radius: 0.3125em;
-    box-shadow: 0 2px 4px 0 rgba(34,36,38,.12),0 2px 10px 0 rgba(34,36,38,.08);width: 30%;
-    height: 30%;" 
-    src="img/normal-day_0.JPG">   <img style="border-radius: 0.3125em;
-    box-shadow: 0 2px 4px 0 rgba(34,36,38,.12),0 2px 10px 0 rgba(34,36,38,.08);width: 20%;
-    height: 20%;" 
-    src="img/normal-day_1.JPG">   <img style="border-radius: 0.3125em;
-    box-shadow: 0 2px 4px 0 rgba(34,36,38,.12),0 2px 10px 0 rgba(34,36,38,.08);width: 30%;
-    height: 30%;" 
-    src="img/normal-day_2.JPG">
+    box-shadow: 0 2px 4px 0 rgba(34,36,38,.12),0 2px 10px 0 rgba(34,36,38,.08);width: 40%;
+    height: 40%;" 
+    src="img/initial.jpg">   <img style="border-radius: 0.3125em;
+    box-shadow: 0 2px 4px 0 rgba(34,36,38,.12),0 2px 10px 0 rgba(34,36,38,.08);width: 40%;
+    height: 40%;" 
+    src="img/step_000.jpg">   <img style="border-radius: 0.3125em;
+    box-shadow: 0 2px 4px 0 rgba(34,36,38,.12),0 2px 10px 0 rgba(34,36,38,.08);width: 40%;
+    height: 40%;" 
+    src="img/step_001.jpg">   <img style="border-radius: 0.3125em;
+    box-shadow: 0 2px 4px 0 rgba(34,36,38,.12),0 2px 10px 0 rgba(34,36,38,.08);width: 40%;
+    height: 40%;" 
+    src="img/step_002.jpg">
     <br>
     <div style="color:orange; border-bottom: 1px solid #d9d9d9;
     display: inline-block;
@@ -27,6 +27,6 @@ Initially, we can draw the following <strong>Kripke model (with m=5)</strong>: (
 
 ---
 <font size=6>Mesa model</font>
-- Mesa helps with creating MAS simulations. Here the Mesa model is used to illustrate the variation of number of states in Kripke model and number of alive islanders day by day. The interface has a grid to display the islanders and a graph to show the number of alive islanders. Sliders allow adjusting the counts of brown-eyed and blue-eyed islanders, and a selector offers puzzle variations. This model enables exploring the dynamics of the islander population in a flexible way.
+- The model is implemented in Python with the help of *mesa* and *pygraphviz*. Mesa is a multi-agent simulation module that helps with creating and running agents and environments. It allows stepwise updates of the agents' knowledge and collects data which are presened below. Pygraphviz is used to represent the Kripke model and perform updates on the graph.
 
 
